syntax = "proto3";

package share;

message UserBase {
  string loginname = 1;
  string avatar_url = 2;
}